samples/_failures_safe/1761272249_e11f16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1108d28.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_e1108d28.c:175:26: error: expected ‘;’ at end of input
  175 |             start = graph
      |                          ^
      |                          ;
./samples/SAFE/__tmp_e1108d28.c:175:13: error: expected declaration or statement at end of input
  175 |             start = graph
      |             ^~~~~
./samples/SAFE/__tmp_e1108d28.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e1108d28.c:175:13: error: expected declaration or statement at end of input
